syntax = "proto3";

option go_package = "github.com/clebersonp/go-basic-todo-grpc-api/proto";

import "google/protobuf/timestamp.proto";

message Todo {
  string id = 1;
  string title = 2;
  string description = 3;
  string status = 4;
  google.protobuf.Timestamp createdAt = 5;
  google.protobuf.Timestamp updatedAt = 6;

}

message CreateRequest {
  string title = 1;
  string description = 2;
}

message CreateResponse {
  bool error = 1;
  string description = 2;
}

message GetRequest {
  string id = 1;
}

service Tasker {
  rpc Create(CreateRequest) returns (CreateResponse);
  rpc GetByID(GetRequest) returns (Todo);
}